# open-session-manager

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/audits/: 2026-03-16-local-code-audit.md
docs/plans/: 2026-03-15-agent-session-governance-design.md  2026-03-15-agent-session-governance.md  2026-03-15-audit-ui-evolution.md  2026-03-15-first-upstream-adoption.md  2026-03-15-open-session-manager-design.md  2026-03-15-open-session-manager-release-branding.md  2026-03-15-open-session-manager.md  2026-03-15-release-publish.md  2026-03-15-release-readiness.md  2026-03-15-second-upstream-adoption-viewer.md  2026-03-15-upstream-intake-pipeline.md  2026-03-15-usability-clarity.md  2026-03-16-copilot-factory-config-governance.md  2026-03-16-project-config-derivation.md  2026-03-16-session-handoff-export.md  2026-03-16-session-quality-hardening.md  2026-03-16-session-search-absorption.md  2026-03-16-upstream-absorption-master-plan.md  2026-03-16-upstream-absorption-phase1.md  2026-03-16-web-first-config-governance-phase2.md  2026-03-22-spec-execution-sweep.md  (+43 more)
scripts/: check-fixture-snapshot.mjs  export-dashboard-snapshot.mjs  fixture-ledger.mjs  git-review-snapshot.mjs  git-tdd-checkpoint.mjs  git-worktree-manager.mjs  intake-upstreams.mjs  run-tauri.mjs  verify.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_server.rs  desktop.rs  lib.rs  main.rs  mcp_server.rs  openapi.rs  preferences.rs  session_text.rs  test_support.rs  usage.rs
src-tauri/src/actions/: config_writeback.rs  delete.rs  export.rs  git_control.rs  mod.rs  restore.rs  session_control.rs  tests.rs
src-tauri/src/adapters/: claude_code.rs  codex.rs  copilot_cli.rs  factory_droid.rs  gemini_cli.rs  mod.rs  openclaw.rs  opencode.rs  qwen_cli.rs  roo_code.rs  tests.rs  traits.rs
src-tauri/src/audit/: config_audit.rs  credential_audit.rs  mod.rs  redaction.rs  tests.rs
src-tauri/src/commands/: actions.rs  configs.rs  dashboard.rs  discovery.rs  mod.rs  query.rs
src-tauri/src/discovery/: linux.rs  mod.rs  tests.rs  windows.rs  wsl.rs
src-tauri/src/domain/: audit.rs  config.rs  mod.rs  session.rs
src-tauri/src/insights/: garbage.rs  mod.rs  progress.rs  tests.rs  title.rs  value.rs
src-tauri/src/storage/: mod.rs  schema.sql  sqlite.rs  tests.rs
src-tauri/src/transcript/: mod.rs
src-tauri/tests/: cli_snapshot.rs  config_backup_manifest_visibility.rs  http_api.rs  mcp_server.rs  mcp_viewer_snapshot.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+137 files in other folders)
