[package]
name = "agent-session-governance-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
toml = "0.9"

[lib]
name = "agent_session_governance_core"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[package.metadata.tauri-winres]
FileDescription = "Agent Session Governance"
OriginalFilename = "agent-session-governance.exe"
ProductName = "Agent Session Governance"
