[package]
name = "open-session-manager-core"
version = "0.3.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.8.6", default-features = false, features = ["http1", "json", "query", "tokio"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread"] }
toml = "0.9"
json5 = "0.4"
rand = "0.9.2"

[lib]
name = "open_session_manager_core"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[package.metadata.tauri-winres]
FileDescription = "open Session Manager"
OriginalFilename = "open-session-manager-core.exe"
ProductName = "open Session Manager"
